first day of project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym project</title>
 </head>
+<link rel="stylesheet" href="css/style.css">
+<style>
+
+body{
+    color: yellow;
+    margin: 0px;
+    padding:opx;
+    background: url('img/body.webp');
+    height: 1000px;
+    width:1600px
+    
+}
+
+.left{
+    display: inline-block;
+border: 2px solid red;
+}
+
+.mid{
+    display: inline-block;
+    border: 2px solid rgb(103, 5, 5);
+}
+
+.right{
+    display: inline-block;
+    border: 2px solid rgb(223, 99, 99);
+}
+</style>
 <body>
-<h1>rohit </h1>
+<header class="header">
+    <!-- left box for logo -->
+    <div class="left">
+I am left 
+    </div>
+    <!-- mid box for navbar -->
+    <div class="mid">
+I am middle
+    </div>
+<!-- right box for buttons -->
+    <div class="right">
+I am right
+    </div>
+
+</header>
 </body>
 </html>
