--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style>
 
 body{
-    color: yellow;
+    color: blue;
     margin: 0px;
     padding:opx;
     background: url('img/body.webp');
@@ -20,38 +20,69 @@ body{
 
 .left{ 
     display: inline-block;
-    border: 2px solid red;
+    border: 2px solid black;
     position:absolute;
     left:34px;
-    top:0px;
-   
+    top:20px;
+    font-style:italic;
+    background-color: black;
+}
 
+.name:hover{
+   color: brown;
+   animation: backwards;
 }
 
 .mid{
-  background-color: black;
-  width:33%;
-  margin:auto; 
+    background-color: black;
+    width: 50%;
     border: 2px solid white;
+    position: relative;
+    top: 10px;
+    left: 297px;
+
 }
 
 .right{
     position:absolute;
     right:34px;
-    top:0px;
+    top:20px;
     display: inline-block;
     border: 2px solid yellow;
+}
+
+.navbar li {
+    display:inline-block;
+    font-size: 20px;
+}
+
+.navbar li a {
+color: bisque;
+text-decoration: none;
+padding: 20px 31px;
+}
+
+.navbar li a:hover , .navbar li a.active {
+ text-decoration: underline;
+ color:aqua
 }
 </style>
 <body>
     <header class="header">
 <!-- left box for logo -->
 <div class="left">
-I am left 
+<img src="img/logo.jpg" height="100" wedth="100" alt="logo">
+<div class="name">Rohit Fitness</div>
+
 </div>
 <!-- mid box for navbar -->
 <div class="mid">
-I am mid    
+<ul class="navbar">
+    <li><a href="#" class="active">HOME</a></li>
+    <li><a href="#">ABOUT US</a></li>
+    <li><a href="#">FITNESS CALCULATOR</a></li>
+    <li><a href="#">CONTACT US</a></li>
+</ul>
 </div>
 <!-- right box for button -->
 <div class="right">
