added buttons in second day of project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@ padding: 20px 31px;
  text-decoration: underline;
  color:aqua
 }
+.btn{
+    margin:0px 9px;
+    background-color: black;
+    color:red;
+    padding:10px 20px;
+    border:2px solid green;
+    border-radius: 10px;
+    cursor :pointer;
+font-style:oblique;
+}
+
+.btn:hover{
+    background-color: greenyellow;
+    
+}
 </style>
 <body>
     <header class="header">
@@ -86,7 +101,7 @@ padding: 20px 31px;
 </div>
 <!-- right box for button -->
 <div class="right">
-I am right 
+<button class="btn">Call</button><button class="btn">Email Us</button>
 </div>
 
 </header>
